$Id: CHANGES,v 1.132 2001/08/16 09:37:57 stelian Exp $

Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
===================================================================

1.	Fixed the permissions of a newly created QFA file by dump.

2.	Cleaned up the source of dump (the external variables 
	definition was a complete mess, making possible to have
	objects overlap).

3.	Fixed restore to use the full tape volume path when doing
	a compare (since it changes the working directory to the
	filesystem being compared in the process).

4.	Added the -q option to dump which makes dump abort 
	whenever it needs operator attention. It should be
	easier to use dump in scripts with this option.

Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
===================================================================

1.	Fixed a buffer overflow in restore/tape.c. Patch provided by
	Marcus Meissner (Caldera International Security Dept.).

2.	Implement the Sun rmt extended protocol. Patch submitted
	by Ian Gordon <iangordon@users.sourceforge.net>.

3.	Check for the e2fsprogs header <ext2fs/ext2_fs.h> instead of 
	the linux kernel header. This ensures that dump always has the
	latest version of this file. Patch submitted by
	Andreas Dilger <adilger@turbolinux.com>.

4.	Report any filesystem present in either /etc/fstab with a 
	positive passno or /etc/dumpdates in dump -w output.
	Patch submitted by Andreas Dilger <adilger@turbolinux.com>.

5.	Fixed the looping problem in dump introduced in the 
	previous version.

6.	Changed the -B option of dump to limit the size of 
	_compressed_ output per volume if compression is on.
	Patch contributed by Helmut Jarausch 
	<jarausch@igpm.rwth-aachen.de>. Note however that, since
	it is impossible to predict the size of the compressed
	data before doing the compression, the -B limit is a bit
	conservative.

7.	Fixed a bug in reading the operator typed file/tape path for
	the next volume in restore.
