@@ -1,4 +1,4 @@
-$Id: CHANGES,v 1.132 2001/08/16 09:37:57 stelian Exp $
+$Id: CHANGES,v 1.133 2001/08/16 13:12:30 stelian Exp $
 
 Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 ===================================================================
@@ -16,6 +16,9 @@ Changes between versions 0.4b23 and 0.4b24 (released ?????????????)
 4.	Added the -q option to dump which makes dump abort 
 	whenever it needs operator attention. It should be
 	easier to use dump in scripts with this option.
+
+5.	Detect the use of incompatible options to dump and
+	refuse them (like -a and -B options together).
 
 Changes between versions 0.4b22 and 0.4b23 (released July 20, 2001)
 ===================================================================
